--- a/docker-compose-dind.yml
+++ b/docker-compose-dind.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "2375:2375" # Expose Docker daemon on TCP port 2375
     environment:
-      - DOCKER_TLS_CERTDIR=
+      - DOCKER_TLS_CERTDIR=  # Run Docker daemon without TLS
       - AWS_ACCESS_KEY_ID=myrootaccesskeyid
       - AWS_SECRET_ACCESS_KEY=myrootsecretaccesskey
       - AWS_DEFAULT_REGION=eu-west-3
